Bug 165580 - uno-skeletonmaker should be able to create Java services in passive registration mode
Summary: uno-skeletonmaker should be able to create Java services in passive registrat...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-05 09:54 UTC by prrvchr
Modified: 2025-07-14 20:00 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description prrvchr 2025-03-05 09:54:21 UTC
Description:
uno-skeletonmaker should be able to create Java services in passive registration mode
see LOEclipse [issue #154](https://github.com/LibreOffice/loeclipse/issues/154)

Steps to Reproduce:
uno-skeletonmaker should be able to create Java services in passive registration mode.

Actual Results:
uno-skeletonmaker is not able to create Java services in passive registration mode.

Expected Results:
uno-skeletonmaker should be able to create Java services in passive registration mode.


Reproducible: Always


User Profile Reset: No

Additional Info:
no
Comment 1 Stephan Bergmann 2025-03-05 12:13:05 UTC
Why would this only be relevant for Java (`uno-skeletonmaker --java`), not for C++ (`uno-skeletonmaker --cpp`)?
Comment 2 prrvchr 2025-03-05 15:05:38 UTC
Because for now only Java and Python languages ​​are migrated under passive registration in LOEclipse. Nothing has been done regarding C++.
Comment 3 prrvchr 2025-03-05 15:09:37 UTC
Besides, it doesn't seem to me that LOEclipse is capable of managing C++ code.
Comment 4 Stephan Bergmann 2025-03-05 15:19:03 UTC
But uno-skeletonmaker is part of the LO SDK, not of the external LOEclipse product.  So I guess it would make sense to use this issue to track that it consistently supports --passive-registration for both Java and C++.
Comment 5 prrvchr 2025-03-05 16:45:18 UTC
Yes certainly, but this goes beyond the scope of my action which only aims at the integration of passive registration for LOEclipse. I even thought that eventually it would be possible to add the Python language to `uno-skeletonmaker`.


In addition I do not really see how I will be able to test C++ code on passive registration.
Comment 6 prrvchr 2025-03-05 16:49:51 UTC
I will be able to integrate Python as a language to uno-skeletonmaker but to do the same with C++ I don't think I'm the right person... I don't know how to write in C++ but only how to act like a monkey
Comment 7 prrvchr 2025-03-05 17:02:26 UTC
Nothing prevents the integration of passive registration from being implemented later for C++ and the -pr option from being taken into account only for Java currently?
Comment 8 Stephan Bergmann 2025-03-05 17:27:31 UTC
(In reply to prrvchr from comment #7)
> Nothing prevents the integration of passive registration from being
> implemented later for C++ and the -pr option from being taken into account
> only for Java currently?

Sure, fine with me.  We should just document what gets done and what is planned to be done.  (So in <https://gerrit.libreoffice.org/c/core/+/182436> "tdf#165580 uno-skeletonmaker provide passive registration", I'd probably use something like "This option is not yet implemented for '--cpp' target language" rather than "This option is taken into account only for '--java5' target language", to make it clear that this is about a missing feature, not about --passive-registration being incompatible with --cpp by design.)
Comment 9 prrvchr 2025-03-05 17:46:05 UTC
Ok I just understood the distinction you want. It's done.
Comment 10 Commit Notification 2025-03-06 10:59:18 UTC
prrvchr committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f78397068fa7fd403046605fb37620fba7a76e63

tdf#165580 uno-skeletonmaker provide passive registration

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 prrvchr 2025-03-06 11:41:45 UTC
Maybe there is still time to push to a version lower than 25.8.0?
Comment 12 Stephan Bergmann 2025-03-06 13:15:42 UTC
(In reply to prrvchr from comment #11)
> Maybe there is still time to push to a version lower than 25.8.0?

no need to rush in features
Comment 13 prrvchr 2025-03-06 13:35:25 UTC
It's really a shame, especially since this new feature is expected for LOEclipse, see [PR#152](https://github.com/LibreOffice/loeclipse/pull/152), which means that this PR cannot be published before this date and I'm not sure that I will still be available to finish this work in 6 months.
Comment 14 prrvchr 2025-03-06 14:26:14 UTC
@Stephan Bergmann I was afraid I wouldn't be able to succeed with my LOEclipse PR...

It seems to me that you are not really simplifying things. I ask for a little more indulgence please.
Comment 15 prrvchr 2025-03-06 14:28:38 UTC
@StephanBergmann Thank for the cherry pick https://gerrit.libreoffice.org/c/core/+/182585

This path will be available for 25.2
Comment 16 Commit Notification 2025-03-06 15:14:05 UTC
prrvchr committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/7c2b9d61dac51bb2206d44c5cc11a7198e3725fc

tdf#165580 uno-skeletonmaker provide passive registration

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.