tdf#165580 uno-skeletonmaker provide passive registration

Change-Id: Ic347a68eb1a13923493d6efe6d911e7e705145a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182436
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <stephan.bergmann@allotropia.de>
(cherry picked from commit f78397068fa7fd403046605fb37620fba7a76e63)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182585